# Obsidian-CLI-Termux

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deep-research-report.md  fix.py  release-please-config.json  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: release.yml  rust.yml
benches/: resolve_note.rs  search_benchmark.rs
scripts/: build-android-cross.ps1  build-termux.sh  setup-termux.sh
src/: app.rs  encoding.rs  main.rs  parser.rs  registry.rs  search_index.rs  tui.rs  updater.rs  vault.rs
