[package]
name = "obsidian-termux-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "obsidian"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
csv = "1.4"
dirs = "6.0"
once_cell = "1.21"
rand = "0.9"
regex = "1.11"
crossterm = "0.28"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
shlex = "1.3"
walkdir = "2.5"
